# unlightened

./: .gitignore  CMakeLists.txt  create_proj_win.bat  unlightened.sln
magic/: LinearLayer.cu  kernel.cu  magic.vcxproj  magic.vcxproj.filters
magic/include/: AllLayers.h  GpuMemory.h  GpuUtils.h  InputLayer.h  Layer.h  LinearLayer.h  LinearLayerGPU.h  NeuralNet.h  OutputLayer.h  SigmoidLayer.h  SigmoidLayerGPU.h  cnn_layer.h  conv_filter.h  shape.h
magic/source/: GpuUtils.cpp  cnnLayer.cu  cnn_layer.cpp  linearLayerGPU.cu  sigmoidLayerGPU.cu  source.cpp
model/: CMakeLists.txt
model/include/: image_helper.h  loss_plot.h  shape_plot.h  viewer.h
model/source/: image_helper.cpp  loss_plot.cpp  main.cpp  shape_plot.cpp  viewer.cpp
python_interface/: CMakeLists.txt  python_api.cpp  python_api.h
soul/: soul.vcxproj  soul.vcxproj.filters
soul/header/: LinearLayer.h
tests/: CMakeLists.txt  test.cpp  tests.vcxproj
tests/include/: tests_objects.h
tests/source/: cnn_tests.cpp  conv2d_transposed_tests.cpp  converging_models_tests.cpp  convering_models_tests.cpp  cuda_batch_norm_tests.cpp  cuda_device_tests.cpp  cuda_optimizer_tests.cpp  dense_layer_tests.cpp  generic_functions_tests.cpp  main.cpp  serialization_tests.cpp  test.cpp
unlightened/: CMakeLists.txt
unlightened/include/: AllLayers.h  GpuMemory.h  InputLayer.h  Layer.h  LinearLayer.h  LinearLayerGPU.h  NeuralNet.h  OutputLayer.h  SigmoidLayer.h  SigmoidLayerGPU.h  activation_layer.h  adam_optimizer.h  batch_norm.h  batch_norm_cuda.h  batch_runner.h  binary_serialization.h  blob.h  cnn_layer.h  conv2d_cudnn.h  conv_filter.h  conv_transpose.h  csv_parser.h  cuda_device.h  cuda_vector.h  cuda_vector_norm.h  cudnn_helpers.h  device_layer.h  device_memory.h  device_vector.h  gan.h  generic_functions.h  generic_stream.h  loss_layer.h  max_pool.h  optimizer.h  optimizer_momentum.h  read_write_stream.h  reshape_layer.h  serializable_interface.h  shape.h  (+1 more)
unlightened/source/: GpuUtils.cpp  activation_layer.cpp  activation_layer.cu  adam_optimizer.cpp  batch_norm_cuda.cpp  binary_serialization.cpp  cnnLayer.cu  cnn_layer.cpp  conv2d_cudnn.cpp  conv_transpose.cpp  cuda_vector.cpp  cuda_vector_norm.cu  gan.cpp  generic_functions.cu  linearLayerGPU.cu  loss_layer.cpp  max_pool.cpp  max_pool.cu  optimizer_momentum.cpp  read_write_stream.cpp  reshape_layer.cpp  sigmoidLayerGPU.cu  softmax.cpp  softmax.cu
